--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
   "bugs": {
     "url": "https://github.com/karlwoien/sp2-fed-noroff/issues"
   },
-  "homepage": "https://github.com/karlwoien/sp2-fed-noroff#readme"
+  "homepage": "https://github.com/karlwoien/sp2-fed-noroff#readme",
+  "dependencies": {
+    "bootstrap": "^3.4.1",
+    "live-server": "^1.2.2",
+    "sass": "^1.77.8"
+  }
 }
