adds new script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "lint": "eslint src/**/*.mjs",
     "lint-fix": "eslint src/**/*.mjs --cache --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "bootstrap": "mkdir -p public/vendor/bootstrap && cp -r node_modules/bootstrap/dist/* public/vendor/bootstrap/"
   },
   "repository": {
     "type": "git",
