Revert "adds new script"
This reverts commit 75eaf302ef39253fb91df892e7025a0b96253624.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "lint": "eslint src/**/*.mjs",
     "lint-fix": "eslint src/**/*.mjs --cache --fix",
-    "prepare": "husky install",
-    "bootstrap": "mkdir -p public/vendor/bootstrap && cp -r node_modules/bootstrap/dist/* public/vendor/bootstrap/"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
